[UTF-8][Japanese]

*Ver3.20 : 2018/xx/xx

-スタンドアローンHTTPサーバ機能を持った adiary.httpd.cgi が同梱されました。
-Windows用実行ファイル adiary.exe が開発されました。
-【CGI動作以外】ライブラリの自動更新チェックを1秒1回だけ実施するように変更し、応答性能アップ。
-【記法】「空行で段落処理（改行処理なし）」の時、行末スペース2つ以上を改行に置換するよう変更。
-【Markdown】リスト中のブランク行の後に先頭スペースを含む行があったとき、リストが続いているとみなすように変更。（本家準拠）
-【Markdown】途中空行を挟むリストがあった場合、リスト記号が異なれば違うリストと扱うように変更。((標準非準拠の動作ですが、この方が使いやすいと思うので影響の少ない範囲で変更しました。問題がある場合は skel/parser/markdown.html を skel.local/parser/markdown.html にコピー編集してください。))
-【Markdown/fix】リストブロックの処理に問題があった。（[https://adiary.adiary.jp/0399#c12:Thanks to epg]）
-【Markdown/fix】{<p>}で段落ブロックを切り出す際、余計なブランク行を挿入していた。
-【アルバム】delキーでファイルやフォルダを削除できるようになりました。
-【plugin】webpushプラグインをRFC準拠で更新しました。EdgeHTML 17以降に対応しました。
-【fix】同時編集ロック機能での誤検出がまだ発生していた。
-【fix】ブログのコピーを作成した際、設定を保存しないとブログタイトルなどがブログ一覧に反映されない。
-【fix】検索プラグインのradioボタンが文字で選べない。
-【fix】DirectoryIndexに設定されたときの検出に失敗する。
-【fix】サブドメインモードかつ https の時、Canonical URL等がおかしい。
-【fix】アルバムで、101個以上のファイルを一度にアップロードできない。
-【fix】blogid に"te-st"のように不正文字が含まれても正しく表示されてしまう。
-【fix】画像がセンタリングや右揃えされない。（[https://adiary.adiary.jp/0401#c20:Thanks to あさリがいっぱい]）
-【fix】【入力記法】calc記法の変数領域が、CGIキャッシュ環境において分離されてしまう。（[https://adiary.adiary.jp/0401#c12:Thanks to nomura]）
-【fix】【mod_perl】adiary.mod.cgi が起動できない。
-【fix】【アルバム】フォルダを３個連続で作ると動作がおかしくなる。
-【fix】【TagEscpae.pm】すべての属性で「xxx:」といった文字列が書けなくなっていた。((これによりstyle属性にCSSを書くことが困難になっていた。))
-【Security】【IE9-10】【TagEscpae.pm】style属性のエスケープを再度有効化。((Ver3.02-3.16間でIE10以前での「behavior: url(xss.js)」によるXSSが有効なため、第三者レンタル時に脆弱性となりうる。))
-他多数

Markdown記法にてリストの入れ子処理を変更しました。この変更により本家の動作に近づいたと思いますが、もしかしたら不具合があるかも知れません。

*Ver3.16 : 2018/08/11

-画像アルバムモードを追加（詳細設定）。
-adiary.conf.cgi.sample のパーサー設定の説明と順番を変更。
-更新通知Ping送信先から http://blogsearch.google.co.jp/ping/RPC2 を削除。
-プライベートブログでは更新通知を送らないように変更。
-irisテーマを再録。
-印刷用テーマ _sagiri を収録。
-「{<input><label></label>}」を「{<label><input></label>}」に書き換え。
-印刷用テーマで、ユーザーCSS（カスタムデザインを含む）を無効化。
-【plugin】サイドタグモジュールで、表示階層などを選択できるように変更。複数配置に対応。（[https://adiary.adiary.jp/0399#c3:Thanks to nomura]）