@@ -29,7 +29,7 @@
 	gaid:filter0 = reg_del:[^\w\-]
 
 	asid = AmazonアフィリエイトID
-	asid:filter0 = reg_del:[^\w\-]
+	asid:filter0 = reg_del:[^\w\-\.]
 	asid:filter1 = trim
 <$end>
 <$ifbreak(form_error())>
