@@ -96,7 +96,7 @@
 		<button type="button" data-title="Google Analyticsの自動設定" id="gaid-setting" data-msg="Google Analyticsのトラッキングコードを貼り付けてください。">コードから自動設定する</button>
 		</td>
 	</tr>
-	<tr><th>AmazonアフィリエイトID<span class="help" data-help="Amazonアソシエイトを利用する方は、トラッキングIDを設定してください。ここで設定したIDは、記法でAmazonの商品にリンクする際、自動的に挿入されます。">?</span></th>
+	<tr><th>AmazonアフィリエイトID<span class="help" data-help="Amazonアソシエイトを利用する方は、トラッキングIDを設定してください。ここで設定したIDは、記法でAmazonの商品にリンクする際、自動的に挿入されます。\nIDを変更した場合はブログの再構築が必要です。">?</span></th>
 		<td>
 		<input type="text" name="asid" class="w160" value="<@s.asid>" id="asid">
 		<button type="button" data-title="AmazonアソシエイトIDの自動設定" id="asid-setting" data-msg="Amazonアソシエイトの<a href='https://widgets.amazon.co.jp/Widget-Source/' target='_blank'>ウィジェットコード</a>を貼り付けてください。">コードから自動設定する</button>
