@@ -6,12 +6,14 @@
 -Windows用実行ファイル adiary.exe が開発されました。
 -【CGI動作以外】ライブラリの自動更新チェックを1秒1回だけ実施するように変更し、応答性能アップ。
 -【記法】「空行で段落処理（改行処理なし）」の時、行末スペース2つ以上を改行に置換するよう変更。
+-【記法】Amazon紹介リンク作成機能（asinタグ、or URLフィルター機能）のリンク先を変更。
 -【Markdown】リスト中のブランク行の後に先頭スペースを含む行があったとき、リストが続いているとみなすように変更。（本家準拠）
 -【Markdown】途中空行を挟むリストがあった場合、リスト記号が異なれば違うリストと扱うように変更。((標準非準拠の動作ですが、この方が使いやすいと思うので影響の少ない範囲で変更しました。問題がある場合は skel/parser/markdown.html を skel.local/parser/markdown.html にコピー編集してください。))
 -【Markdown/fix】リストブロックの処理に問題があった。（[https://adiary.adiary.jp/0399#c12:Thanks to epg]）
 -【Markdown/fix】{<p>}で段落ブロックを切り出す際、余計なブランク行を挿入していた。
 -【アルバム】delキーでファイルやフォルダを削除できるようになりました。
 -【plugin】webpushプラグインをRFC準拠で更新しました。EdgeHTML 17以降に対応しました。
+-【fix】AmaoznのアフィリエイトIDに「.（ドット）」を含む場合、正しく保存されない。
 -【fix】同時編集ロック機能での誤検出がまだ発生していた。
 -【fix】ブログのコピーを作成した際、設定を保存しないとブログタイトルなどがブログ一覧に反映されない。
 -【fix】検索プラグインのradioボタンが文字で選べない。
